--- a/css/main.css
+++ b/css/main.css
@@ -33,3 +33,15 @@ a:hover {
   color: #3f1622;
   text-decoration: underline;
 }
+
+img {
+  width: 100%;
+}
+
+figcaption {
+  font-family: "PT Serif", serif;
+  font-style: italic;
+  font-size: .8rem;
+  color: #222;
+  text-align: center;
+}
