--- a/css/main.css
+++ b/css/main.css
@@ -62,3 +62,17 @@ figure + p {
   font-weight: bold;
   font-size: 1.25rem;
 }
+
+blockquote p {
+  font-size: 1.5rem;
+  font-style: italic;
+  font-weight: normal;
+}
+
+h2 + ol {
+  list-style-type: lower-greek;
+}
+
+h2 + p {
+  font-style: italic;
+}
